Fix displaying tables with events on tablets and phones

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -73,7 +73,7 @@ table td ul span.title {
 }
 
 table td.date {
-    min-width: 125px;
+    min-width: 130px;
 }
 
 .near-deadline {
